preventing side drawer from displaying on mobile devices till finished.

--- a/src/components/Navigation/sideDrawer/sideDrawer.css
+++ b/src/components/Navigation/sideDrawer/sideDrawer.css
@@ -1,4 +1,5 @@
 .SideDrawer{
+    display:none;
     position: fixed;
     width: 280px;
     max-width: 70%;
